# planchet-bot

./: Dockerfile  README.md  pyproject.toml
conf/: .env.example
planchet_bot/: app.py  bot.py  dependencies.py  manage.py
planchet_bot/common/: views.py
planchet_bot/project/settings/: __init__.py  config.py  env.py  settings.py
planchet_bot/weather/: views.py  weather_service.py
tests/: test_planchet_bot.py
